 - Obsolete Windows build docs are gone.
 - Added `row::to(std::tuple<...>)`.
 - Unified the test suites.  We no longer need `test/unit/unit_runner`.
 - New helper: `strip_t<...>` to remove a type's constness and reference.
 - Replace custom templating with CMake glob in `src/CMakeLists.txt`.
 - Replace custom templating with CMake glob in `doc/CMakeLists.txt`.
7.0.7
 - Fix broken `--with-postgres-lib` option in `configure` script (#311)
 - Should now build even if neither `pkg-config` nor `pg_config` is available.
 - CMake accepts `PostgreSQL_ROOT`, if it's a sufficiently recent version.
7.0.6
 - Prefer `pg_config` over `pkg-config` for include path (#291).
 - Try to plod on if we don't know the PostgreSQL include path.
 - Fix error message when starting overlapping transactions and such (#303).
 - Fix potential crashes when converting invalid strings to floats (#307, #308).
7.0.5
 - Compile fix for g++ 10: include `<limits>` (#292).
 - Cleaned up error-checking of PG results.  (#280).
 - The `esc()` methods now also take `std::string_view` (#295).
7.0.4
 - Fix possible crash in `connection::connection_string` (#290).
 - Fix filtering of default values in `connection::connection_string` (#288).
 - Deprecate `row::swap` and public inheritance of iterators from `row`.
 - More copy/move/default constructors/assignments on result iterators.
 - More copy/move/default constructors/assignments on row iterators.
7.0.3
 - Fixed misreporting of broken connection as `sql_error` (#280).
 - Replaced non-ASCII test texts with escape codes (#282, #283).
 - `ilostream` could truncate at `0xff` byte at buffer boundary (#284, #286).
7.0.2
 - New query function: `query_value`, queries and converts a single value.
 - A `stream_from` stream can now be iterated.
 - More callable types qualify as transactors, thanks to `std::invoke`.
7.0.1
 - Windows build fixes.
 - Documentation for writing your own string conversions.