@@ -17,6 +17,7 @@
  - New helper: `strip_t<...>` to remove a type's constness and reference.
  - Replace custom templating with CMake glob in `src/CMakeLists.txt`.
  - Replace custom templating with CMake glob in `doc/CMakeLists.txt`.
+ - Replace custom templating with CMake glob in `test/unit/CMakeLists.txt`.
 7.0.7
  - Fix broken `--with-postgres-lib` option in `configure` script (#311)
  - Should now build even if neither `pkg-config` nor `pg_config` is available.
